syntax = "proto3";

package com.road.yishi.proto.battle;

message BaseItemMsg {
  int32 templateId = 1;
  int32 count = 2;
  int32 type = 3;
}
